log
Thu 21 Mar 2024 04:10:53 PM UTC: 
 tests:  0|5
total_score: 0/70
89a008d
Thu 21 Mar 2024 04:19:12 PM UTC: 
 exercises.c | 8 ++++++++
 1 file changed, 8 insertions(+)
 tests:  0|5
total_score: 0/70
84fcc55
Thu 21 Mar 2024 04:19:51 PM UTC: 
 exercises.c | 2 --
 1 file changed, 2 deletions(-)
 tests:  0|5
total_score: 0/70
7ba28ae
Thu 21 Mar 2024 04:20:57 PM UTC: 
 exercises.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:51:17: error: expected expression before ‘List’
   51 |   imprime_lista(List *L);
      |                 ^~~~
Compilation failed
10c6f76
Thu 21 Mar 2024 04:22:37 PM UTC: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  1|4
total_score: 10/70
b287f3e
Thu 21 Mar 2024 04:22:58 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|4
total_score: 10/70
1456b7e
Thu 21 Mar 2024 04:26:42 PM UTC: 
 exercises.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
 tests:  2|3
total_score: 20/70
a210cf6
Thu 21 Mar 2024 04:43:38 PM UTC: 
 exercises.c | 11 ++++++++---
 1 file changed, 8 insertions(+), 3 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘eliminaElementos’:
exercises.c:84:17: error: comparison between pointer and integer [-Werror]
   84 |     if(elemento == elem)
      |                 ^~
cc1: all warnings being treated as errors
Compilation failed
0f59730
Thu 21 Mar 2024 04:45:20 PM UTC: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  2|3
total_score: 20/70
111889c
Thu 21 Mar 2024 04:49:24 PM UTC: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  3|2
total_score: 40/70
8174e17
Thu 21 Mar 2024 05:28:47 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  3|2
total_score: 40/70
5116282
Thu 21 Mar 2024 08:40:07 PM UTC: 
 exercises.c | 10 ++++++++++
 1 file changed, 10 insertions(+)
In file included from test.c:5:
exercises.c: In function ‘copia_pila’:
exercises.c:102:17: error: comparison between pointer and integer [-Werror]
  102 |   while(top(P1) != -1){
      |                 ^~
exercises.c:100:10: error: unused variable ‘PilaAux’ [-Werror=unused-variable]
  100 |   Stack* PilaAux = create_stack();
      |          ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
ab18580
Thu 21 Mar 2024 08:42:48 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘copia_pila’:
exercises.c:100:10: error: unused variable ‘PilaAux’ [-Werror=unused-variable]
  100 |   Stack* PilaAux = create_stack();
      |          ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
9fa866b
Thu 21 Mar 2024 08:47:10 PM UTC: 
 exercises.c | 14 ++++++++------
 1 file changed, 8 insertions(+), 6 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘copia_pila’:
exercises.c:103:20: error: initialization of ‘int’ from ‘void *’ makes integer from pointer without a cast [-Werror=int-conversion]
  103 |     int elemento = top(P1);
      |                    ^~~
exercises.c:104:18: error: passing argument 2 of ‘push’ makes pointer from integer without a cast [-Werror=int-conversion]
  104 |     push(PilaAux,elemento);
      |                  ^~~~~~~~
      |                  |
      |                  int
In file included from exercises.c:7,
                 from test.c:5:
stack.h:11:31: note: expected ‘void *’ but argument is of type ‘int’
   11 | void push(Stack *stack, void *data) { pushFront(stack, data); }
      |                         ~~~~~~^~~~
In file included from test.c:5:
exercises.c:107:20: error: initialization of ‘int’ from ‘void *’ makes integer from pointer without a cast [-Werror=int-conversion]
  107 |     int elemento = top(PilaAux);
      |                    ^~~
exercises.c:108:14: error: passing argument 2 of ‘push’ makes pointer from integer without a cast [-Werror=int-conversion]
  108 |     push(P2, elemento);
      |              ^~~~~~~~
      |              |
      |              int
In file included from exercises.c:7,
                 from test.c:5:
stack.h:11:31: note: expected ‘void *’ but argument is of type ‘int’
   11 | void push(Stack *stack, void *data) { pushFront(stack, data); }
      |                         ~~~~~~^~~~
cc1: all warnings being treated as errors
Compilation failed
8d47f35
Thu 21 Mar 2024 08:49:02 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
b614102
